--- a/plantilla-libro/index.html
+++ b/plantilla-libro/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title id="pageTitle">Descarga GRATIS...</title>
+  <title>Descarga GRATIS el libro de Kiyosaki</title>
 
   <!-- Tu AdSense real -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9410088002968295"
@@ -22,93 +22,59 @@
     .btn{background:#28a745;color:#fff;padding:16px 40px;font-size:1.4rem;border:none;border-radius:50px;cursor:pointer;transition:.3s;font-weight:bold;box-shadow:0 10px 30px rgba(40,167,69,0.4);margin:15px 10px;min-width:280px}
     .btn:hover{background:#218838;transform:translateY(-3px)}
     .progreso{font-size:1.5rem;color:#d4af37;margin:40px 0;font-weight:bold}
-    .ad{background:#f9f9f9;margin:40px auto;padding:20px;border:6px dashed #ccc;border-radius:16px;min-height:300px;display:none}
+    .ad{background:#f9f9f9;margin:40px auto;padding:20px;border:6px dashed #ccc;border-radius:16px;min-height:300px;display:none;text-align:center;color:#555}
 
     #descarga{display:none;margin-top:50px}
     #descarga .btn{background:#d4af37;color:#000;font-size:1.8rem;padding:20px 60px}
 
     @media (max-width:480px){
-      .header{padding:30px 15px}
       .header h1{font-size:1.8rem}
       .content{padding:25px 15px}
       .btn{font-size:1.3rem;padding:14px 30px;min-width:90%}
-      .progreso{font-size:1.3rem}
     }
   </style>
 </head>
 <body>
 <div class="container">
   <div class="header">
-    <h1 id="tituloLibro">Cargando...</h1>
-    <p id="autorLibro"></p>
+    <h1>8 Lecciones de Liderazgo Militar para Emprendedores</h1>
+    <p>Robert T. Kiyosaki • 2016</p>
   </div>
   <div class="content">
-    <img src="portada.jpg" alt="Portada" class="portada">
-    <h2 id="descripcionLibro"></h2>
+    <img src="portada.jpg" alt="Portada del libro" class="portada">
+    <h2>Libro COMPLETO en PDF – GRATIS con solo 3 anuncios</h2>
 
     <div class="progreso">Anuncios vistos: <span id="contador">0</span>/3</div>
     <button class="btn" id="botonAnuncio">Ver Anuncio 1/3</button>
 
-    <!-- ANUNCIO 1 -->
     <div class="ad" id="ad1">
-      <p style="margin:15px 0;font-size:18px;color:#444">Cargando anuncio 1/3… Gracias por apoyar el sitio ❤️</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="1111111111"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
+      <p>Cargando anuncio 1/3… Gracias por apoyar el sitio ❤️</p>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295" data-ad-slot="1111111111" data-ad-format="auto" data-full-width-responsive="true"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
-    <!-- ANUNCIO 2 -->
     <div class="ad" id="ad2">
-      <p style="margin:15px 0;font-size:18px;color:#444">Cargando anuncio 2/3… ¡Casi tienes tu libro gratis!</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="2222222222"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
+      <p>Cargando anuncio 2/3… ¡Ya casi!</p>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295" data-ad-slot="2222222222" data-ad-format="auto" data-full-width-responsive="true"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
-    <!-- ANUNCIO 3 -->
     <div class="ad" id="ad3">
-      <p style="margin:15px 0;font-size:18px;color:#444">Último anuncio 3/3… ¡Gracias por tu paciencia!</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="3333333333"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
+      <p>Último anuncio 3/3… ¡Gracias!</p>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295" data-ad-slot="3333333333" data-ad-format="auto" data-full-width-responsive="true"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
     <div id="descarga">
-      <h2>¡Descarga desbloqueada!</h2>
-      <a id="enlaceDescarga" download>
-        <button class="btn">DESCARGAR PDF COMPLETO</button>
+      <h2>¡DESCARGA DESBLOQUEADA!</h2>
+      <a href="8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf" download>
+        <button class="btn">DESCARGAR PDF AHORA</button>
       </a>
     </div>
   </div>
 </div>
 
 <script>
-  const d = {
-    "titulo": "8 Lecciones de Liderazgo Militar para Emprendedores",
-    "autor": "Robert T. Kiyosaki",
-    "año": "2016",
-    "descripcion": "Libro COMPLETO en PDF – GRATIS con solo 3 anuncios",
-    "archivo_pdf": "8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf"
-  };
-
-  document.getElementById('pageTitle').textContent = `${d.titulo} - ${d.autor} GRATIS`;
-  document.getElementById('tituloLibro').innerHTML = `${d.titulo}<br><small>${d.autor} • ${d.año}</small>`;
-  document.getElementById('autorLibro').textContent = `${d.autor} • ${d.año}`;
-  document.getElementById('descripcionLibro').textContent = d.descripcion;
-  document.getElementById('enlaceDescarga').href = d.archivo_pdf;
-
   let adsVistos = 0;
   document.getElementById('botonAnuncio').onclick = function() {
     adsVistos++;
