--- a/index.html
+++ b/index.html
@@ -3,77 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title id="pageTitle">Descarga GRATIS...</title>
+  <title>8 Lecciones de Liderazgo Militar - GRATIS</title>
 
-  <!-- Google AdSense (tu cuenta real) -->
+  <!-- Tu AdSense real -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9410088002968295"
      crossorigin="anonymous"></script>
 
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      font-family:'Segoe UI',sans-serif;
-      background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-      color:#fff;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:10px;
-    }
-    .container{
-      max-width:960px;
-      width:100%;
-      background:#fff;
-      color:#222;
-      border-radius:20px;
-      overflow:hidden;
-      box-shadow:0 0 20px 60px rgba(0,0,0,0.6);
-    }
-    .header{background:#d4af37;padding:40px 20px;text-align:center;color:#000}
-    .header h1{font-size:2.2rem;line-height:1.2;margin:0}
-    .header small{font-size:0.9rem;display:block;margin-top:8px;opacity:0.9}
-    .content{padding:30px 20px;text-align:center}
-    .portada{max-width:100%;height:auto;border-radius:16px;box-shadow:0 15px 40px rgba(0,0,0,0.5);margin:30px auto}
-    h2{font-size:1.6rem;margin:25px 0;color:#111}
-    .btn{
-      background:#28a745;color:#fff;padding:16px 40px;font-size:1.4rem;
-      border:none;border-radius:50px;cursor:pointer;transition:.3s;
-      font-weight:bold;box-shadow:0 10px 30px rgba(40,167,69,0.4);
-      margin:15px 10px;min-width:280px;
-    }
-    .btn:hover{background:#218838;transform:translateY(-3px)}
-    .progreso{font-size:1.5rem;color:#d4af37;margin:40px 0;font-weight:bold}
-    .ad{background:#f9f9f9;margin:40px auto;padding:20px;border:6px dashed #ccc;
-        border-radius:16px;min-height:300px;display:none}
-
-    #descarga{display:none;margin-top:50px}
-    #descarga .btn{background:#d4af37;color:#000;font-size:1.8rem;padding:20px 60px}
-
+    body{font-family:'Segoe UI',sans-serif;background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);color:#fff;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:10px}
+    .container{max-width:960px;width:100%;background:#fff;color:#222;border-radius:20px;overflow:hidden;box-shadow:0 0 30px rgba(0,0,0,0.7)}
+    .header{background:#d4af37;padding:50px 20px;text-align:center;color:#000}
+    .header h1{font-size:2.4rem;line-height:1.2}
+    .header small{font-size:1rem;display:block;margin-top:10px}
+    .content{padding:40px 20px;text-align:center}
+    .portada{max-width:100%;height:auto;border-radius:16px;box-shadow:0 20px 50px rgba(0,0,0,0.6);margin:40px auto}
+    h2{font-size:1.8rem;margin:30px 0;color:#111}
+    .btn{background:#28a745;color:#fff;padding:18px 60px;font-size:1.6rem;border:none;border-radius:50px;cursor:pointer;font-weight:bold;box-shadow:0 12px 35px rgba(40,167,69,0.5);margin:20px;min-width:300px;transition:.3s}
+    .btn:hover{background:#218838;transform:scale(1.05)}
+    .progreso{font-size:1.8rem;color:#d4af37;margin:50px 0;font-weight:bold}
+    .ad{background:#f9f9f9;margin:50px auto;padding:30px;border:6px dashed #ccc;border-radius:16px;min-height:320px;display:none;text-align:center;color:#555;font-size:18px}
+    #descarga{display:none;margin-top:60px}
+    #descarga .btn{background:#d4af37;color:#000;font-size:2rem;padding:25px 80px}
     @media (max-width:480px){
-      .header{padding:30px 15px}
-      .header h1{font-size:1.8rem}
-      .content{padding:25px 15px}
-      .btn{font-size:1.3rem;padding:14px 30px;min-width:90%}
-      .progreso{font-size:1.3rem}
+      .header h1{font-size:2rem}
+      .btn{font-size:1.4rem;padding:16px 40px;min-width:90%}
+      .progreso{font-size:1.5rem}
     }
   </style>
 </head>
 <body>
 <div class="container">
   <div class="header">
-    <h1 id="tituloLibro">Cargando...</h1>
-    <p id="autorLibro"></p>
+    <h1>8 Lecciones de Liderazgo Militar para Emprendedores</h1>
+    <p>Robert T. Kiyosaki • 2016</p>
   </div>
   <div class="content">
     <img src="portada.jpg" alt="Portada" class="portada">
-    <h2 id="descripcionLibro"></h2>
+    <h2>Libro COMPLETO en PDF – GRATIS con solo 3 anuncios</h2>
 
     <div class="progreso">Anuncios vistos: <span id="contador">0</span>/3</div>
     <button class="btn" id="botonAnuncio">Ver Anuncio 1/3</button>
 
-    <!-- ANUNCIO 1 -->
+    <!-- ANUNCIO 1 – CON TEXTO (Google lo ama) -->
     <div class="ad" id="ad1">
+      <p>Cargando anuncio 1/3…<br>Gracias por apoyar el sitio ❤️</p>
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9410088002968295"
@@ -85,6 +59,7 @@
 
     <!-- ANUNCIO 2 -->
     <div class="ad" id="ad2">
+      <p>Cargando anuncio 2/3…<br>¡Ya casi tienes tu libro gratis!</p>
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9410088002968295"
@@ -96,6 +71,7 @@
 
     <!-- ANUNCIO 3 -->
     <div class="ad" id="ad3">
+      <p>Último anuncio 3/3…<br>¡Gracias por tu paciencia!</p>
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9410088002968295"
@@ -106,8 +82,8 @@
     </div>
 
     <div id="descarga">
-      <h2>¡Descarga desbloqueada!</h2>
-      <a id="enlaceDescarga" download>
+      <h2>¡DESCARGA DESBLOQUEADA!</h2>
+      <a href="8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf" download>
         <button class="btn">DESCARGAR PDF COMPLETO</button>
       </a>
     </div>
@@ -115,20 +91,6 @@
 </div>
 
 <script>
-  const d = {
-    "titulo": "8 Lecciones de Liderazgo Militar para Emprendedores",
-    "autor": "Robert T. Kiyosaki",
-    "año": "2016",
-    "descripcion": "Libro COMPLETO en PDF – GRATIS con solo 3 anuncios",
-    "archivo_pdf": "8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf"
-  };
-
-  document.getElementById('pageTitle').textContent = `${d.titulo} - ${d.autor} GRATIS`;
-  document.getElementById('tituloLibro').innerHTML = `${d.titulo}<br><small>${d.autor} • ${d.año}</small>`;
-  document.getElementById('autorLibro').textContent = `${d.autor} • ${d.año}`;
-  document.getElementById('descripcionLibro').textContent = d.descripcion;
-  document.getElementById('enlaceDescarga').href = d.archivo_pdf;
-
   let adsVistos = 0;
   document.getElementById('botonAnuncio').onclick = function() {
     adsVistos++;
