--- a/index.html
+++ b/index.html
@@ -1,106 +1,82 @@
 <!DOCTYPE html>
-<html lang="es">
+<html ⚡ lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>8 Lecciones de Liderazgo Militar - GRATIS</title>
 
-  <!-- Tu AdSense real -->
+  <!-- AMP obligatorio -->
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+
+  <!-- AMP Auto-Ads (el que más paga y aprueba al instante) -->
+  <script async custom-element="amp-auto-ads"
+          src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+
+  <!-- Anuncios automáticos normales (para navegadores no AMP) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9410088002968295"
      crossorigin="anonymous"></script>
+  <script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-9410088002968295",
+          enable_page_level_ads: true
+     });
+  </script>
 
-  <style>
+  <style amp-custom>
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:'Segoe UI',sans-serif;background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);color:#fff;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:10px}
-    .container{max-width:960px;width:100%;background:#fff;color:#222;border-radius:20px;overflow:hidden;box-shadow:0 0 30px rgba(0,0,0,0.7)}
+    .container{max-width:960px;width:100%;background:#fff;color:#222;border-radius:20px;overflow:hidden;box-shadow:0 0 30px rgba(0,0,0,0.7);margin:20px auto}
     .header{background:#d4af37;padding:50px 20px;text-align:center;color:#000}
     .header h1{font-size:2.4rem;line-height:1.2}
     .header small{font-size:1rem;display:block;margin-top:10px}
     .content{padding:40px 20px;text-align:center}
     .portada{max-width:100%;height:auto;border-radius:16px;box-shadow:0 20px 50px rgba(0,0,0,0.6);margin:40px auto}
     h2{font-size:1.8rem;margin:30px 0;color:#111}
-    .btn{background:#28a745;color:#fff;padding:18px 60px;font-size:1.6rem;border:none;border-radius:50px;cursor:pointer;font-weight:bold;box-shadow:0 12px 35px rgba(40,167,69,0.5);margin:20px;min-width:300px;transition:.3s}
-    .btn:hover{background:#218838;transform:scale(1.05)}
+    .btn{background:#28a745;color:#fff;padding:18px 60px;font-size:1.6rem;border:none;border-radius:50px;cursor:pointer;font-weight:bold;box-shadow:0 12px 35px rgba(40,167,69,0.5);margin:20px;min-width:300px}
+    .btn:hover{background:#218838}
     .progreso{font-size:1.8rem;color:#d4af37;margin:50px 0;font-weight:bold}
-    .ad{background:#f9f9f9;margin:50px auto;padding:30px;border:6px dashed #ccc;border-radius:16px;min-height:320px;display:none;text-align:center;color:#555;font-size:18px}
     #descarga{display:none;margin-top:60px}
     #descarga .btn{background:#d4af37;color:#000;font-size:2rem;padding:25px 80px}
     @media (max-width:480px){
       .header h1{font-size:2rem}
       .btn{font-size:1.4rem;padding:16px 40px;min-width:90%}
-      .progreso{font-size:1.5rem}
     }
   </style>
 </head>
 <body>
+
+<!-- AMP Auto-Ads (los que pagan más) -->
+<amp-auto-ads type="adsense" data-ad-client="ca-pub-9410088002968295"></amp-auto-ads>
+
 <div class="container">
   <div class="header">
     <h1>8 Lecciones de Liderazgo Militar para Emprendedores</h1>
     <p>Robert T. Kiyosaki • 2016</p>
   </div>
   <div class="content">
-    <img src="portada.jpg" alt="Portada" class="portada">
-    <h2>Libro COMPLETO en PDF – GRATIS con solo 3 anuncios</h2>
+    <amp-img src="portada.jpg" alt="Portada" width="400" height="600" layout="responsive"></amp-img>
+    <h2>Libro COMPLETO en PDF – GRATIS con solo 3 pasos</h2>
 
-    <div class="progreso">Anuncios vistos: <span id="contador">0</span>/3</div>
-    <button class="btn" id="botonAnuncio">Ver Anuncio 1/3</button>
-
-    <!-- ANUNCIO 1 – CON TEXTO (Google lo ama) -->
-    <div class="ad" id="ad1">
-      <p>Cargando anuncio 1/3…<br>Gracias por apoyar el sitio ❤️</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="1111111111"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    </div>
-
-    <!-- ANUNCIO 2 -->
-    <div class="ad" id="ad2">
-      <p>Cargando anuncio 2/3…<br>¡Ya casi tienes tu libro gratis!</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="2222222222"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    </div>
-
-    <!-- ANUNCIO 3 -->
-    <div class="ad" id="ad3">
-      <p>Último anuncio 3/3…<br>¡Gracias por tu paciencia!</p>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9410088002968295"
-           data-ad-slot="3333333333"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    </div>
+    <div class="progreso">Pasos completados: <span id="contador">0</span>/3</div>
+    <button class="btn" id="botonAnuncio">Continuar →</button>
 
     <div id="descarga">
-      <h2>¡DESCARGA DESBLOQUEADA!</h2>
+      <h2 style="color:#28a745">¡DESCARGA DESBLOQUEADA!</h2>
       <a href="8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf" download>
-        <button class="btn">DESCARGAR PDF COMPLETO</button>
+        <button class="btn">DESCARGAR PDF AHORA</button>
       </a>
     </div>
   </div>
 </div>
 
 <script>
-  let adsVistos = 0;
+  let pasos = 0;
   document.getElementById('botonAnuncio').onclick = function() {
-    adsVistos++;
-    document.getElementById('contador').textContent = adsVistos;
-    if (adsVistos === 1) { document.getElementById('ad1').style.display = 'block'; this.textContent = 'Ver Anuncio 2/3'; }
-    if (adsVistos === 2) { document.getElementById('ad2').style.display = 'block'; this.textContent = 'Ver Anuncio 3/3'; }
-    if (adsVistos === 3) {
-      document.getElementById('ad3').style.display = 'block';
+    pasos++;
+    document.getElementById('contador').textContent = pasos;
+    if (pasos === 3) {
       this.style.display = 'none';
-      document.querySelector('.progreso').innerHTML = '¡DESCARGA DESBLOQUEADA!';
+      document.querySelector('.progreso').innerHTML = '¡DESCARGA LISTA!';
       document.getElementById('descarga').style.display = 'block';
     }
   };
