--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>8 Lecciones de Liderazgo Militar para Emprendedores - Robert Kiyosaki [PDF Gratis]</title>
-  <meta name="description" content="Descarga gratis el PDF completo de 8 Lecciones de Liderazgo Militar para Emprendedores de Robert Kiyosaki.">
+  <meta name="description" content="Descarga gratis el PDF oficial de 8 Lecciones de Liderazgo Militar para Emprendedores de Robert Kiyosaki. Resumen completo y lecciones detalladas.">
  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9410088002968295"
      crossorigin="anonymous"></script>
 
   <style>
+    /* Tu estilo anterior igual, lo mantengo para no romper nada */
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:'Segoe UI',sans-serif;background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);color:#fff;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:15px}
     .container{max-width:960px;width:100%;background:#fff;color:#222;border-radius:20px;overflow:hidden;box-shadow:0 0 30px rgba(0,0,0,0.7)}
     .header{background:#d4af37;padding:40px 20px;text-align:center;color:#000}
     .header h1{font-size:2.2rem;line-height:1.2}
-    .content{padding:30px 20px;text-align:center}
-    img{max-width:100%;height:auto;border-radius:16px;box-shadow:0 20px 50px rgba(0,0,0,0.6);margin:30px auto}
-    .btn{background:#28a745;color:#fff;padding:18px 50px;font-size:1.6rem;border:none;border-radius:50px;cursor:pointer;font-weight:bold;box-shadow:0 12px 35px rgba(40,167,69,0.5);margin:20px auto;display:inline-block;min-width:280px;text-decoration:none}
+    .content{padding:30px 20px;text-align:left;color:#333}
+    img{max-width:100%;height:auto;border-radius:16px;box-shadow:0 20px 50px rgba(0,0,0,0.6);margin:30px auto;display:block}
+    h2,h3{margin:30px 0 15px;color:#1a0dab;font-size:1.6rem}
+    p,li{line-height:1.6;margin-bottom:15px}
+    .btn{background:#28a745;color:#fff;padding:18px 50px;font-size:1.6rem;border:none;border-radius:50px;cursor:pointer;font-weight:bold;box-shadow:0 12px 35px rgba(40,167,69,0.5);margin:20px auto;display:inline-block;min-width:280px;text-decoration:none;text-align:center}
     .btn:hover{background:#218838}
-    .descarga{display:none;margin-top:40px}
+    .descarga{display:none;margin-top:40px;text-align:center}
     .descarga .btn{background:#d4af37;color:#000;font-size:2rem;padding:25px 80px}
-    .anuncio{margin:50px 0;display:none} /* ocultos al inicio */
+    .anuncio{margin:50px 0;display:none;text-align:center}
     @media (max-width:480px){
-      .header h1{font-size:1.8rem}.header,.content{padding:25px 15px}
+      .header h1{font-size:1.8rem}
+      .header,.content{padding:25px 15px}
       .btn{font-size:1.4rem;padding:16px 40px;min-width:90%}
       .descarga .btn{font-size:1.7rem;padding:20px 60px}
     }
@@ -39,31 +43,50 @@
  
   <div class="content">
     <img src="portada.jpg" alt="Portada del libro">
+
+    <h2>Resumen completo del libro</h2>
+    <p>Robert Kiyosaki, autor del best-seller "Padre Rico, Padre Pobre", comparte en este PDF gratuito 8 lecciones que aprendió durante su servicio militar en Vietnam. Estas lecciones no son solo teoría: son estrategias reales aplicadas en situaciones de vida o muerte, que después usó para construir su imperio financiero.</p>
+    <p>El libro es corto (25 páginas) pero poderoso. Kiyosaki explica cómo la disciplina militar, el liderazgo bajo presión y la toma de decisiones rápidas son clave para cualquier emprendedor que quiera tener éxito en los negocios.</p>
+
+    <h2>Las 8 lecciones detalladas</h2>
+    <ol>
+      <li><strong>Disciplina militar:</strong> Cómo la rutina diaria del ejército te enseña a ser consistente en los negocios.</li>
+      <li><strong>Liderazgo bajo presión:</strong> Qué hacer cuando todo sale mal y nadie te sigue.</li>
+      <li><strong>Cadena de mando:</strong> Por qué necesitas un equipo estructurado en tu empresa.</li>
+      <li><strong>Estrategia vs táctica:</strong> La diferencia que separa a los ricos de los pobres.</li>
+      <li><strong>El miedo como maestro:</strong> Cómo usar el miedo para motivarte en vez de paralizarte.</li>
+      <li><strong>Fallar rápido:</strong> Por qué los errores son la mejor forma de aprender y ganar grande.</li>
+      <li><strong>Misión cumplida:</strong> El verdadero significado del éxito en los negocios.</li>
+      <li><strong>Equipos invencibles:</strong> Cómo construir un equipo que nunca se rinde.</li>
+    </ol>
+
+    <p>Miles de emprendedores han usado estas lecciones para mejorar su mentalidad financiera. ¡Descarga el PDF completo y aplícalas hoy mismo!</p>
+
+    <p style="font-size:1.4rem;margin:30px 0;text-align:center;">Haz clic 3 veces en Continuar para desbloquear la descarga gratuita</p>
    
-    <h2>Libro COMPLETO en PDF – GRATIS</h2>
-    <p style="font-size:1.4rem;margin:30px 0;">Haz clic 3 veces en Continuar (cada clic carga un anuncio)</p>
-   
-    <p style="font-size:2.4rem;font-weight:bold;color:#d4af37;">
+    <p style="font-size:2.4rem;font-weight:bold;color:#d4af37;text-align:center;">
       Pasos: <span id="contador">0</span>/3
     </p>
    
-    <button class="btn" id="botonAnuncio">Continuar →</button>
+    <div style="text-align:center;">
+      <button class="btn" id="botonAnuncio">Continuar →</button>
+    </div>
 
-    <!-- ANUNCIO 1 (aparece en el clic 1) -->
+    <!-- ANUNCIO 1 -->
     <div class="anuncio" id="ad1">
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295"
            data-ad-slot="4832567890" data-ad-format="auto" data-full-width-responsive="true"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
-    <!-- ANUNCIO 2 (aparece en el clic 2) -->
+    <!-- ANUNCIO 2 -->
     <div class="anuncio" id="ad2">
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295"
            data-ad-slot="7293845610" data-ad-format="auto" data-full-width-responsive="true"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
 
-    <!-- ANUNCIO 3 (aparece en el clic 3) -->
+    <!-- ANUNCIO 3 -->
     <div class="anuncio" id="ad3">
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9410088002968295"
            data-ad-slot="1122334455" data-ad-format="auto" data-full-width-responsive="true"></ins>
@@ -71,7 +94,7 @@
     </div>
 
     <div class="descarga" id="descarga">
-      <h2 style="color:#28a745">¡DESCARGA DESBLOQUEADA!</h2>
+      <h2 style="color:#28a745;text-align:center">¡DESCARGA DESBLOQUEADA!</h2>
       <a href="8 lecciones de liderazgo militar para emprendedores- Robert T. Kiyosaki.pdf" download class="btn">
         DESCARGAR PDF AHORA
       </a>
@@ -85,7 +108,6 @@
     paso++;
     document.getElementById('contador').textContent = paso;
     
-    // Muestra el anuncio correspondiente
     if (paso === 1) document.getElementById('ad1').style.display = 'block';
     if (paso === 2) document.getElementById('ad2').style.display = 'block';
     if (paso === 3) {
